[package]
name = "iris"
version = "0.1.0"
edition = "2024"
description = "A real-time file-watcher inspired by nodemon"
license = "MIT OR Apache-2.0"

[dependencies]
notify = "8.2.0"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"

[profile.dev]
opt-level = 0
[profile.release]
opt-level = 3
