[package]
name = "wachit"
version = "0.1.1"
edition = "2024"
description = "Instant rebuilds for your dev workflow"
license = "MIT OR Apache-2.0"

[[bin]]
name = "wachit"
path = "src/main.rs"

[dependencies]
notify = "8.2.0"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"

[profile.dev]
opt-level = 0
[profile.release]
opt-level = 3
